tests/shouldPass/continueInSwitch.c
#include <stdio.h>
int main(void) {
	int i, n=0;
	for (i = 1; i <= 1; i++) {
		switch (i) {
			default: n++; continue;
		}
	}
}
